04. Mengelola penambahan data kontak

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-md-8">
             <h2>DAFTAR CONTACT</h2>
+            <a href="/contact/add" class="btn btn-success">Tambah Data</a>
             <table class="table">
                 <thead>
                   <tr>
