07. Membuat rout dengan metode post. yang menangani ketika ada user menambahkan data

--- a/views/add-contact.ejs
+++ b/views/add-contact.ejs
@@ -19,7 +19,7 @@
                   <input type="text" class="form-control" id="nohp" name="nohp" required>
                 </div>
                 
-                <button type="submit" class="btn btn-primary">Tambah Data</button>
+                <button type="submit" class="btn btn-primary">Simpan Data</button>
               </form>
         </div>
     </div>
