--- a/views/add-contact.ejs
+++ b/views/add-contact.ejs
@@ -3,6 +3,16 @@
         <div class="col md-6">
             <h2>Form Tambah Data Contact</h2>
 
+            <% if (typeof errors != 'undefined') { %>
+              <div class="alert alert-danger" role="alert">
+                <ul>
+                    <% errors.forEach(error => { %>
+                    <li><%= error.msg %> </li>
+                    <% }) %>
+                  </ul> 
+                </div>
+            <% } %>
+
             <form method="post" action="/contact">
                 <div class="mb-3">
                   <label for="nama" class="form-label">Nama Mahasiswa</label>
